@@ -2,6 +2,6 @@ package h12;
 
 public class BadCharException extends RuntimeException {
     public BadCharException(char character, int index) {
-        super("Bad char '%s' at position %d".formatted(character, index));
+        super(String.format("Bad char '%s' at position %d", character, index));
     }
 }
