@@ -2,6 +2,6 @@ package h12;
 
 public class BadEnrollmentNumberException extends RuntimeException {
     public BadEnrollmentNumberException(int number) {
-        super("Bad enrollment number '%d'".formatted(number));
+        super(String.format("Bad enrollment number '%d'", number));
     }
 }
