@@ -2,6 +2,6 @@ package h12;
 
 public class BadStudentMarkException extends RuntimeException {
     public BadStudentMarkException(String message) {
-        super("Bad student mark '%s'".formatted(message));
+        super(String.format("Bad student mark '%s'", message));
     }
 }
